kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mithriljs-service
spec:
  selector:
    app: mithriljs
  ports:
    - port: 8080
      targetPort: 8080
